--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,11 @@
-cloudpickle==2.2.1
-EasyProcess==1.1
-entrypoint2==1.1
-Farama-Notifications==0.0.4
-gym==0.26.2
-gym-notices==0.0.8
-gymnasium==0.28.1
-importlib-metadata==6.6.0
-jax-jumpy==1.0.0
-MouseInfo==0.1.3
-mss==9.0.1
-numpy==1.24.3
-Pillow==10.0.0
-PyAutoGUI==0.9.54
-pygame==2.4.0
-PyGetWindow==0.0.9
-PyMsgBox==1.0.9
-pyobjc-core==9.2
-pyobjc-framework-Cocoa==9.2
-pyobjc-framework-Quartz==9.2
-pyperclip==1.8.2
-PyRect==0.2.0
-pyscreenshot==3.1
-PyScreeze==0.1.29
-pytweening==1.0.7
-rubicon-objc==0.4.6
-typing_extensions==4.6.3
-zipp==3.15.0
+gym
+gymnasium
+keras-rl2
+matplotlib
+numpy
+opencv-python
+Pillow
+PyAutoGUI
+pygame
+scipy
+tensorflow
