--- a/資料/Redoc.desktop
+++ b/資料/Redoc.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
 Icon=text-html
-Name=https://www.procon.gr.jp/wp-content/uploads/2023/07/spec.html
+Name=Redoc
 Type=Link
 URL[$e]=https://www.procon.gr.jp/wp-content/uploads/2023/07/spec.html
