--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 # gym
-# gymnasium
+gymnasium
 # keras-rl2
 matplotlib
 numpy
-opencv-python
-Pillow
+# opencv-python
+# Pillow
 PyAutoGUI
 pygame
 # scipy
-tensorflow
-git+https://github.com/pocokhc/simple_distributed_rl
+# tensorflow
+# git+https://github.com/pocokhc/simple_distributed_rl
+ray
+torch
+torchvision
+torchaudio
