--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 .venv/
 __pycache__/
 memo
-test.py
-.Xauthority
+test*
 .devcontainer
 model/*
+!model/*.keras
 !model/*.zip.*
-Stochastic_muzero/*/
+.env
