--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,9 @@ numpy
 PyAutoGUI
 pygame
 # scipy
-# tensorflow
+tensorflow
 # git+https://github.com/pocokhc/simple_distributed_rl
-ray
-torch
-torchvision
-torchaudio
+# ray
+# torch
+# torchvision
+# torchaudio
